// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots Components/Spruce Form Example 1 1`] = `
<div>
  <h3
    className="css-f090xx-StyledH3 e1c06qt21 leafygreen-ui-376vw8"
  >
    Distro Projects
  </h3>
  <div
    className="css-197y785-StyledCard e1c06qt20 leafygreen-ui-1v4ednr"
  >
    <form
      className="rjsf"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="form-group field field-object css-ejwhfc-DefaultFieldContainer e7smmlm8"
        id=" root"
      >
        <fieldset
          className="css-enw7dc-ObjectFieldTemplate"
          id="root"
        >
          <div
            className="form-group field field-string css-ejwhfc-DefaultFieldContainer e7smmlm8"
            id=" root_cloneMethod"
          >
            <div
              className="css-1ik0alb-ElementWrapper-LeafyGreenSelect ee4bs9n0"
            >
              <div
                className="css-12pm1mq-MaxWidthContainer eevpusu0"
              >
                <div
                  className="leafygreen-ui-1nkq8lt"
                >
                  <label
                    className="leafygreen-ui-1w8j8ik"
                    htmlFor="select-6"
                    id="select-5-label"
                  >
                    Project Cloning Method
                  </label>
                  <button
                    aria-controls="select-5-menu"
                    aria-describedby="select-5-description"
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-invalid={false}
                    aria-labelledby="select-5-label"
                    className="static-lg-ui-classname leafygreen-ui-23wnbt"
                    data-testid="leafygreen-ui-select-menubutton"
                    disabled={false}
                    id="select-6"
                    onClick={[Function]}
                    type="button"
                    value="legacy-ssh"
                  >
                    <div
                      className="leafygreen-ui-v038xi"
                    />
                    <div
                      className="leafygreen-ui-1qmzz4y"
                    >
                      <div
                        className="leafygreen-ui-obh8q1"
                      >
                        <div
                          className="leafygreen-ui-17aj16e"
                        >
                          Legacy SSH
                        </div>
                      </div>
                      <svg
                        alt=""
                        aria-hidden={true}
                        className="leafygreen-ui-866818"
                        height={16}
                        role="presentation"
                        viewBox="0 0 16 16"
                        width={16}
                      >
                        <path
                          d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="form-group field field-array css-ejwhfc-DefaultFieldContainer e7smmlm8"
            id=" root_expansions"
          >
            <h6
              className="css-ho1tq1-StyledSubtitle e63qz861 leafygreen-ui-41zalo"
              id="root_expansions__title"
            >
              Expansions
            </h6>
            <div
              className="css-y5jij6-ElementWrapper-AddButtonContainer e7smmlm3"
            >
              <button
                aria-disabled={false}
                className="static-lg-ui-classname leafygreen-ui-1t94nwe"
                data-cy="add-button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <div
                  className="leafygreen-ui-v038xi"
                />
                <div
                  className="leafygreen-ui-1qmzz4y"
                >
                  <svg
                    alt=""
                    aria-hidden={true}
                    className="leafygreen-ui-6juzfh"
                    fill="none"
                    height={16}
                    role="presentation"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M7.5 2a1 1 0 00-1 1v3.5H3a1 1 0 00-1 1v1a1 1 0 001 1h3.5V13a1 1 0 001 1h1a1 1 0 001-1V9.5H13a1 1 0 001-1v-1a1 1 0 00-1-1H9.5V3a1 1 0 00-1-1h-1z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                  Add
                </div>
              </button>
            </div>
            <div
              className="css-fwqti9-ArrayContainer e7smmlm2"
            >
              <div
                className="css-nbhfvd-ArrayItemRow e7smmlm4"
              >
                <div
                  className="form-group field field-object css-ejwhfc-DefaultFieldContainer e7smmlm8"
                  id=" root_expansions_0"
                >
                  <fieldset
                    className="css-enw7dc-ObjectFieldTemplate"
                    id="root_expansions_0"
                  >
                    <div
                      className="form-group field field-string css-ejwhfc-DefaultFieldContainer e7smmlm8"
                      id=" root_expansions_0_key"
                    >
                      <div
                        className="css-1kjj8dy-ElementWrapper-LeafyGreenTextInput ee4bs9n0"
                      >
                        <div
                          className="css-12pm1mq-MaxWidthContainer eevpusu0"
                        >
                          <div
                            className="css-1kbcljo-StyledTextInput eevpusu7 leafygreen-ui-xtefr5"
                          >
                            <div
                              className="leafygreen-ui-a533bt"
                            >
                              <label
                                className="leafygreen-ui-gr5280"
                                htmlFor="textinput-16"
                              >
                                key
                              </label>
                            </div>
                            <div
                              className="leafygreen-ui-lzja97"
                            >
                              <input
                                aria-invalid={false}
                                aria-label="key"
                                autoComplete="on"
                                className="leafygreen-ui-6i61vl"
                                disabled={false}
                                id="textinput-16"
                                onBlur={[Function]}
                                onChange={[Function]}
                                required={true}
                                type="text"
                                value="Sample Input"
                              />
                              <div
                                className="static-lg-ui-classname leafygreen-ui-uy5fvv"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-group field field-string css-ejwhfc-DefaultFieldContainer e7smmlm8"
                      id=" root_expansions_0_value"
                    >
                      <div
                        className="css-1kjj8dy-ElementWrapper-LeafyGreenTextInput ee4bs9n0"
                      >
                        <div
                          className="css-12pm1mq-MaxWidthContainer eevpusu0"
                        >
                          <div
                            className="css-1kbcljo-StyledTextInput eevpusu7 leafygreen-ui-xtefr5"
                          >
                            <div
                              className="leafygreen-ui-a533bt"
                            >
                              <label
                                className="leafygreen-ui-gr5280"
                                htmlFor="textinput-17"
                              >
                                value
                              </label>
                            </div>
                            <div
                              className="leafygreen-ui-lzja97"
                            >
                              <input
                                aria-invalid={false}
                                aria-label="value"
                                autoComplete="on"
                                className="leafygreen-ui-6i61vl"
                                disabled={false}
                                id="textinput-17"
                                onBlur={[Function]}
                                onChange={[Function]}
                                required={true}
                                type="text"
                                value="Sample Input"
                              />
                              <div
                                className="static-lg-ui-classname leafygreen-ui-uy5fvv"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  className="css-1w3q9da-ElementWrapper-DeleteButtonWrapper e7smmlm1"
                >
                  <button
                    aria-disabled={false}
                    className="static-lg-ui-classname leafygreen-ui-1t94nwe"
                    data-cy="delete-item-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <div
                      className="leafygreen-ui-v038xi"
                    />
                    <div
                      className="leafygreen-ui-1qmzz4y"
                    >
                      <svg
                        aria-label="Trash Icon"
                        className="leafygreen-ui-19s4jgs"
                        fill="none"
                        height={16}
                        role="img"
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="M5 2a1 1 0 011-1h4a1 1 0 011 1h2a1 1 0 011 1v1H2V3a1 1 0 011-1h2zm9 3H2l1.678 8.392A2 2 0 005.64 15h4.72a2 2 0 001.962-1.608L14 5z"
                          fill="currentColor"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="form-group field field-string css-ejwhfc-DefaultFieldContainer e7smmlm8"
            id=" root_validProjects"
          >
            <div
              className="css-odleto-ElementWrapper-LeafyGreenTextArea ee4bs9n0"
            >
              <div
                className="leafygreen-ui-1iyoj2o"
              >
                <label
                  className="leafygreen-ui-1k5mcru"
                  htmlFor="textarea-1"
                >
                  Valid Projects
                </label>
                <textarea
                  className="leafygreen-ui-1or2ez7"
                  disabled={false}
                  id="textarea-1"
                  onBlur={[Function]}
                  onChange={[Function]}
                  title="Valid Projects"
                  value=""
                />
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</div>
`;

exports[`storybook Storyshots Components/Spruce Form Example 2 1`] = `
<div>
  <h3
    className="css-f090xx-StyledH3 e1c06qt21 leafygreen-ui-376vw8"
  >
    Admin Options
  </h3>
  <div
    className="css-197y785-StyledCard e1c06qt20 leafygreen-ui-1v4ednr"
  >
    <form
      className="rjsf"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="form-group field field-object css-ejwhfc-DefaultFieldContainer e7smmlm8"
        id=" root"
      >
        <fieldset
          className="css-enw7dc-ObjectFieldTemplate"
          id="root"
        >
          <div
            className="form-group field field-boolean css-ejwhfc-DefaultFieldContainer e7smmlm8"
            id=" root_distroIsCluster"
          >
            <div
              className="css-g4pjur-ElementWrapper-LeafyGreenCheckBox ee4bs9n0"
            >
              <div
                className="leafygreen-ui-55kazc"
              >
                <label
                  className="leafygreen-ui-1iihofw"
                  htmlFor="checkbox-1"
                  id="checkbox-1-label"
                >
                  <input
                    aria-checked={false}
                    aria-disabled={false}
                    aria-label="checkbox"
                    aria-labelledby="checkbox-1-label"
                    checked={false}
                    className="static-lg-ui-classname leafygreen-ui-13rxaxn"
                    disabled={false}
                    id="checkbox-1"
                    onChange={[Function]}
                    onClick={[Function]}
                    type="checkbox"
                  />
                  <div
                    className="static-lg-ui-classname leafygreen-ui-nlfut8"
                  >
                    <svg
                      className="leafygreen-ui-6caof5"
                      fill="none"
                      height="10"
                      stroke="#FFFFFF"
                      viewBox="0 0 10 10"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                        stroke="#FFFFFF"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                      />
                    </svg>
                  </div>
                  <span
                    className="leafygreen-ui-1wmrjan"
                  >
                    Mark distro as a cluster (jobs are not run on this host, used for special purposes).
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            className="form-group field field-boolean css-ejwhfc-DefaultFieldContainer e7smmlm8"
            id=" root_disableShallowClone"
          >
            <div
              className="css-g4pjur-ElementWrapper-LeafyGreenCheckBox ee4bs9n0"
            >
              <div
                className="leafygreen-ui-55kazc"
              >
                <label
                  className="leafygreen-ui-1iihofw"
                  htmlFor="checkbox-2"
                  id="checkbox-2-label"
                >
                  <input
                    aria-checked={false}
                    aria-disabled={false}
                    aria-label="checkbox"
                    aria-labelledby="checkbox-2-label"
                    checked={false}
                    className="static-lg-ui-classname leafygreen-ui-13rxaxn"
                    disabled={false}
                    id="checkbox-2"
                    onChange={[Function]}
                    onClick={[Function]}
                    type="checkbox"
                  />
                  <div
                    className="static-lg-ui-classname leafygreen-ui-nlfut8"
                  >
                    <svg
                      className="leafygreen-ui-6caof5"
                      fill="none"
                      height="10"
                      stroke="#FFFFFF"
                      viewBox="0 0 10 10"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                        stroke="#FFFFFF"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                      />
                    </svg>
                  </div>
                  <span
                    className="leafygreen-ui-1wmrjan"
                  >
                    Disable shallow clone for this distro.
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            className="form-group field field-boolean css-ejwhfc-DefaultFieldContainer e7smmlm8"
            id=" root_disableQueue"
          >
            <div
              className="css-g4pjur-ElementWrapper-LeafyGreenCheckBox ee4bs9n0"
            >
              <div
                className="leafygreen-ui-55kazc"
              >
                <label
                  className="leafygreen-ui-1iihofw"
                  htmlFor="checkbox-3"
                  id="checkbox-3-label"
                >
                  <input
                    aria-checked={false}
                    aria-disabled={false}
                    aria-label="checkbox"
                    aria-labelledby="checkbox-3-label"
                    checked={false}
                    className="static-lg-ui-classname leafygreen-ui-13rxaxn"
                    disabled={false}
                    id="checkbox-3"
                    onChange={[Function]}
                    onClick={[Function]}
                    type="checkbox"
                  />
                  <div
                    className="static-lg-ui-classname leafygreen-ui-nlfut8"
                  >
                    <svg
                      className="leafygreen-ui-6caof5"
                      fill="none"
                      height="10"
                      stroke="#FFFFFF"
                      viewBox="0 0 10 10"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                        stroke="#FFFFFF"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                      />
                    </svg>
                  </div>
                  <span
                    className="leafygreen-ui-1wmrjan"
                  >
                    Disable queueing this distro. Tasks already in the task queue will be removed.
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            className="form-group field field-boolean css-ejwhfc-DefaultFieldContainer e7smmlm8"
            id=" root_decommissionHosts"
          >
            <div
              className="css-g4pjur-ElementWrapper-LeafyGreenCheckBox ee4bs9n0"
            >
              <div
                className="leafygreen-ui-55kazc"
              >
                <label
                  className="leafygreen-ui-1iihofw"
                  htmlFor="checkbox-4"
                  id="checkbox-4-label"
                >
                  <input
                    aria-checked={true}
                    aria-disabled={false}
                    aria-label="checkbox"
                    aria-labelledby="checkbox-4-label"
                    checked={true}
                    className="static-lg-ui-classname leafygreen-ui-13rxaxn"
                    disabled={false}
                    id="checkbox-4"
                    onChange={[Function]}
                    onClick={[Function]}
                    type="checkbox"
                  />
                  <div
                    className="static-lg-ui-classname leafygreen-ui-1mf205r"
                  >
                    <svg
                      className="leafygreen-ui-1degv9q"
                      fill="none"
                      height="10"
                      stroke="#FFFFFF"
                      viewBox="0 0 10 10"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                        stroke="#FFFFFF"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                      />
                    </svg>
                  </div>
                  <span
                    className="leafygreen-ui-1wmrjan"
                  >
                    Decommission hosts of this distro for this update
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            className="form-group field field-string css-ejwhfc-DefaultFieldContainer e7smmlm8"
            id=" root_reprovisionMethod"
          >
            <div
              className="css-1ik0alb-ElementWrapper-LeafyGreenSelect ee4bs9n0"
            >
              <div
                className="css-12pm1mq-MaxWidthContainer eevpusu0"
              >
                <div
                  className="leafygreen-ui-1nkq8lt"
                >
                  
                  <button
                    aria-controls="select-9-menu"
                    aria-describedby="select-9-description"
                    aria-disabled={false}
                    aria-expanded={false}
                    aria-invalid={false}
                    aria-labelledby="select-9-label"
                    className="static-lg-ui-classname leafygreen-ui-yxx2qh"
                    data-testid="leafygreen-ui-select-menubutton"
                    disabled={false}
                    id="select-10"
                    onClick={[Function]}
                    type="button"
                    value=""
                  >
                    <div
                      className="leafygreen-ui-v038xi"
                    />
                    <div
                      className="leafygreen-ui-1qmzz4y"
                    >
                      <div
                        className="leafygreen-ui-obh8q1"
                      >
                        <div
                          className="leafygreen-ui-17aj16e"
                        >
                          
                        </div>
                      </div>
                      <svg
                        alt=""
                        aria-hidden={true}
                        className="leafygreen-ui-866818"
                        height={16}
                        role="presentation"
                        viewBox="0 0 16 16"
                        width={16}
                      >
                        <path
                          d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</div>
`;

exports[`storybook Storyshots Components/Spruce Form Example 3 1`] = `
<div>
  <h3
    className="css-f090xx-StyledH3 e1c06qt21 leafygreen-ui-376vw8"
  >
    UI Options
  </h3>
  <div
    className="css-197y785-StyledCard e1c06qt20 leafygreen-ui-1v4ednr"
  >
    <form
      className="rjsf"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="form-group field field-object css-ejwhfc-DefaultFieldContainer e7smmlm8"
        id=" root"
      >
        <fieldset
          className="css-enw7dc-ObjectFieldTemplate"
          id="root"
        >
          <div
            className="form-group field field-boolean css-ejwhfc-DefaultFieldContainer e7smmlm8"
            id=" root_visible"
          >
            <div
              className="css-g4pjur-ElementWrapper-LeafyGreenCheckBox ee4bs9n0"
            >
              <div
                className="leafygreen-ui-55kazc"
              >
                <label
                  className="leafygreen-ui-1iihofw"
                  htmlFor="checkbox-5"
                  id="checkbox-5-label"
                >
                  <input
                    aria-checked={true}
                    aria-disabled={false}
                    aria-label="checkbox"
                    aria-labelledby="checkbox-5-label"
                    checked={true}
                    className="static-lg-ui-classname leafygreen-ui-13rxaxn"
                    disabled={false}
                    id="checkbox-5"
                    onChange={[Function]}
                    onClick={[Function]}
                    type="checkbox"
                  />
                  <div
                    className="static-lg-ui-classname leafygreen-ui-1mf205r"
                  >
                    <svg
                      className="leafygreen-ui-1degv9q"
                      fill="none"
                      height="10"
                      stroke="#FFFFFF"
                      viewBox="0 0 10 10"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                        stroke="#FFFFFF"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                      />
                    </svg>
                  </div>
                  <span
                    className="leafygreen-ui-1wmrjan"
                  >
                    This is the only visible page element
                  </span>
                </label>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</div>
`;
